--- a/pr2_calibration_launch/capture_data/samples_pr2_beta/left/l_arm_0000.yaml
+++ b/pr2_calibration_launch/capture_data/samples_pr2_beta/left/l_arm_0000.yaml
@@ -4,6 +4,7 @@ camera_measurements:
 - {cam_id: wide_right_rect, config: small_cb_4x5}
 - {cam_id: narrow_right_rect, config: small_cb_4x5}
 - {cam_id: prosilica_rect, config: small_cb_4x5}
+- {cam_id: kinect_rect, config: small_cb_4x5}
 joint_commands:
 - controller: head_traj_controller
   segments:
