--- a/pr2_calibration_launch/view_results/head_laser_config.yaml
+++ b/pr2_calibration_launch/view_results/head_laser_config.yaml
@@ -33,3 +33,10 @@
   plot_ops:
     color: m
     marker: o
+
+- name: "Tilt Laser: Kinect"
+  3d: tilt_laser
+  cam: kinect_rect
+  plot_ops:
+    color: m
+    marker: o
