--- a/pr2_calibration_launch/estimate_params/config_pr2_beta/system.yaml
+++ b/pr2_calibration_launch/estimate_params/config_pr2_beta/system.yaml
@@ -78,6 +78,14 @@
     high_def_frame_joint: [0, -0.109, 0.035, 0, 0, 0]
     high_def_optical_frame_joint: [0, 0, 0, -1.2091995761561452, 1.2091995761561452, -1.2091995761561452]
 
+    # Kinect Head RGB Frames
+    kinect_head_rgb_frame_joint: [0, -0.109, 0.035, 0, 0, 0]
+    kinect_head_rgb_optical_frame_joint: [0, 0, 0, -1.2091995761561452, 1.2091995761561452, -1.2091995761561452]
+
+    # Kinect Torso RGB Frames
+    kinect_torso_rgb_frame_joint: [0.04, 0.0, -0.25, -1.57, 0.0, 0.0]
+    kinect_torso_rgb_optical_frame_joint: [0, 0, 0, -1.2091995761561452, 1.2091995761561452, -1.2091995761561452]
+
   rectified_cams:
     wide_left_rect:
       baseline_shift: 0.0
@@ -109,6 +117,19 @@
       cx_shift: 0.0
       cy_shift: 0.0
       cov: {u: 0.25, v: 0.25}
+    kinect_head:
+      baseline_shift: 0.0
+      f_shift: 0.0
+      cx_shift: 0.0
+      cy_shift: 0.0
+      cov: {u: 0.25, v: 0.25}
+    kinect_torso:
+      baseline_shift: 0.0
+      f_shift: 0.0
+      cx_shift: 0.0
+      cy_shift: 0.0
+      cov: {u: 0.25, v: 0.25}
+   
     forearm_left_rect:
       baseline_shift: 0.0
       f_shift: 0.0
