--- a/pr2_calibration_launch/estimate_params/config_pr2_beta/free_arms_only_1.yaml
+++ b/pr2_calibration_launch/estimate_params/config_pr2_beta/free_arms_only_1.yaml
@@ -17,11 +17,11 @@
     l_wrist_roll_joint:             [0, 0, 0, 1, 0, 0]
 
     kinect_head_rgb_frame_joint:    [1, 1, 1, 1, 1, 1]
-#   kinect_torso_rgb_frame_joint:   [1, 1, 1, 1, 1, 1]
+    kinect_torso_rgb_frame_joint:   [1, 1, 1, 1, 1, 1]
     l_forearm_cam_frame_joint:      [1, 1, 1, 1, 1, 1]
     r_forearm_cam_frame_joint:      [1, 1, 1, 1, 1, 1]
-    right_arm_cb:                   [1, 1, 1, 0, 1, 1]
-    left_arm_cb:                    [1, 1, 1, 0, 1, 1]
+    right_arm_chain_cb:             [1, 1, 1, 0, 1, 1]
+    left_arm_chain_cb:              [1, 1, 1, 0, 1, 1]
 
   chains:
     right_arm_chain:
