fix naming of joints

--- a/pr2_calibration_launch/estimate_params/config_pr2_beta/free_head_laser_1.yaml
+++ b/pr2_calibration_launch/estimate_params/config_pr2_beta/free_head_laser_1.yaml
@@ -1,7 +1,7 @@
 
   transforms:
-    r_arm_wrist_roll_joint:     [0, 0, 0, 1, 0, 0]
-    l_arm_wrist_roll_joint:     [0, 0, 0, 1, 0, 0]
+    r_wrist_roll_joint:         [0, 0, 0, 1, 0, 0]
+    l_wrist_roll_joint:         [0, 0, 0, 1, 0, 0]
     head_pan_joint:             [0, 0, 0, 0, 0, 1]
     wide_stereo_frame_joint:    [1, 1, 1, 1, 1, 1]
     narrow_stereo_frame_joint:  [1, 1, 1, 1, 1, 1]
