--- a/pr2_calibration_launch/estimate_params/config_pr2_beta/free_head_laser_0.yaml
+++ b/pr2_calibration_launch/estimate_params/config_pr2_beta/free_head_laser_0.yaml
@@ -1,7 +1,7 @@
 
   transforms:
-    r_arm_wrist_roll_joint:     [0, 0, 0, 1, 0, 0]
-    l_arm_wrist_roll_joint:     [0, 0, 0, 1, 0, 0]
+    r_wrist_roll_joint:         [0, 0, 0, 1, 0, 0]
+    l_wrist_roll_joint:         [0, 0, 0, 1, 0, 0]
     right_arm_chain_cb:         [1, 1, 1, 0, 1, 1]
     left_arm_chain_cb:          [1, 1, 1, 0, 1, 1]
 
