--- a/pr2_calibration_estimation/CMakeLists.txt
+++ b/pr2_calibration_estimation/CMakeLists.txt
@@ -16,15 +16,10 @@ set(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
 #set the default path for built libraries to the "lib" directory
 set(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)
 
-
-rosbuild_add_executable(pr2_fk_ref test/pr2_fk_ref.cpp)
-
-rosbuild_add_rostest(${CMAKE_CURRENT_SOURCE_DIR}/test/test_pr2_fk.launch)
-
 #uncomment if you have defined messages
 #rosbuild_genmsg()
 #uncomment if you have defined services
-rosbuild_gensrv()
+#rosbuild_gensrv()
 
 #common commands for building c++ executables and libraries
 #rosbuild_add_library(${PROJECT_NAME} src/example.cpp)
