--- a/pr2_calibration_launch/capture_data/samples_pr2_beta/2_right/r_arm_0001.yaml
+++ b/pr2_calibration_launch/capture_data/samples_pr2_beta/2_right/r_arm_0001.yaml
@@ -3,25 +3,27 @@ camera_measurements:
 - {cam_id: wide_left_rect, config: small_cb_4x5}
 - {cam_id: wide_right_rect, config: small_cb_4x5}
 - {cam_id: narrow_right_rect, config: small_cb_4x5}
-#- {cam_id: kinect_torso, config: small_cb_4x5}
+- {cam_id: prosilica_rect, config: small_cb_4x5}
+- {cam_id: kinect_head, config: small_cb_4x5}
 joint_commands:
 - controller: head_traj_controller
   segments:
   - duration: 2.0
-    positions: [-0.36107371565258672, 1.0752624455686663]
+    positions: [-0.60590850312235134, 0.178233023213661]
 - controller: r_arm_controller
   segments:
   - duration: 2.0
-    positions: [-0.95817555396895826, 0.067422153714250393, -1.7003630264968681, -1.487347495592622,
-      -0.81437129008999232, -1.312180771965155, 6.1699098336976324]
+    positions: [-0.47366928213473342, 0.21140271283803219, -0.40998773869839361, -0.7422126441016047,
+      0.41100355278372719, -1.0664423912426462, 4.6819917841317036]
 - controller: l_arm_controller
   segments:
   - duration: 2.0
-    positions: [1.7389071696196932, 0.24532527700291842, 0.033314251555530701, -1.5530733985607439,
-      -0.41279681247919975, -0.14799251582026429, -0.030730206835985582]
+    positions: [1.7491875901719594, -0.13332159881262076, 0.0084592534681983324, -1.5611805583982215,
+      -0.41279681247919975, -0.14938480126345122, -0.032035474438973352]
 joint_measurements:
 - {chain_id: head_chain, config: tight_tol}
 - {chain_id: right_arm_chain, config: tight_tol}
-laser_measurements: []
-sample_id: r_arm_0011
+laser_measurements:
+- {config: small_cb_4x5, laser_id: tilt_laser}
+sample_id: r_arm_0001
 target: {chain_id: right_arm_chain, target_id: small_cb_4x5}
