oneiric linker fixes

--- a/interval_intersection/CMakeLists.txt
+++ b/interval_intersection/CMakeLists.txt
@@ -24,8 +24,6 @@ rosbuild_genmsg()
 #common commands for building c++ executables and libraries
 rosbuild_add_library(${PROJECT_NAME} src/interval_intersection.cpp)
 #target_link_libraries(${PROJECT_NAME} another_library)
-#rosbuild_add_boost_directories()
-#rosbuild_link_boost(${PROJECT_NAME} thread)
 #target_link_libraries(example ${PROJECT_NAME})
 
 #rosbuild_add_executable(interval_intersection src/interval_intersection.cpp src/interval_intersector.cpp)
@@ -33,8 +31,10 @@ rosbuild_add_library(${PROJECT_NAME} src/interval_intersection.cpp)
 rosbuild_add_executable(interval_intersection_node src/interval_intersection_node.cpp)
 target_link_libraries(interval_intersection_node ${PROJECT_NAME})
 
+rosbuild_add_boost_directories()
 rosbuild_add_executable(interval_intersection_action src/interval_intersection_action.cpp)
 target_link_libraries(interval_intersection_action ${PROJECT_NAME})
+rosbuild_link_boost(interval_intersection_action thread)
 
 #rosbuild_add_executable(test_interval_intersector test/test_interval_intersector.cpp src/interval_intersector.cpp)
 #rosbuild_add_gtest(test_interval_intersector test/test_interval_intersector.cpp src/interval_intersector.cpp)
