--- a/image_cb_detector/CMakeLists.txt
+++ b/image_cb_detector/CMakeLists.txt
@@ -23,14 +23,14 @@ rosbuild_genmsg()
 
 rosbuild_add_library(image_cb_detector_old src/image_cb_detector_old.cpp)
 
+rosbuild_add_boost_directories()
 rosbuild_add_executable(image_cb_detector_node_old src/image_cb_detector_node_old.cpp)
 target_link_libraries(image_cb_detector_node_old image_cb_detector_old)
 
 rosbuild_add_executable(image_cb_detector_action_old src/image_cb_detector_action_old.cpp)
 target_link_libraries(image_cb_detector_action_old image_cb_detector_old)
+rosbuild_link_boost(image_cb_detector_action_old thread)
 
 #common commands for building c++ executables and libraries
-#rosbuild_add_boost_directories()
-#rosbuild_link_boost(${PROJECT_NAME} thread)
 #rosbuild_add_executable(example examples/example.cpp)
 #target_link_libraries(example ${PROJECT_NAME})
