--- a/joint_states_settler/CMakeLists.txt
+++ b/joint_states_settler/CMakeLists.txt
@@ -24,14 +24,14 @@ rosbuild_add_library(${PROJECT_NAME} src/joint_states_deflater.cpp
 rosbuild_add_executable(joint_states_settler_node src/joint_states_settler_node.cpp)
 target_link_libraries(joint_states_settler_node ${PROJECT_NAME})
 
+rosbuild_add_boost_directories()
 rosbuild_add_executable(joint_states_settler_action src/joint_states_settler_action.cpp)
 target_link_libraries(joint_states_settler_action ${PROJECT_NAME})
+rosbuild_link_boost(joint_states_settler_action thread)
 
 rosbuild_add_executable(view_interval src/view_interval.cpp)
 
 # target_link_libraries(${PROJECT_NAME} another_library)
-# rosbuild_add_boost_directories()
-# rosbuild_link_boost(${PROJECT_NAME} thread)
 # rosbuild_add_executable(example examples/example.cpp)
 # target_link_libraries(example ${PROJECT_NAME})
 
