--- a/monocam_settler/CMakeLists.txt
+++ b/monocam_settler/CMakeLists.txt
@@ -22,13 +22,13 @@ rosbuild_add_library(${PROJECT_NAME} src/monocam_settler.cpp)
 rosbuild_add_executable(monocam_settler_node src/monocam_settler_node.cpp)
 target_link_libraries(monocam_settler_node ${PROJECT_NAME})
 
+rosbuild_add_boost_directories()
 rosbuild_add_executable(monocam_settler_action src/monocam_settler_action.cpp)
 target_link_libraries(monocam_settler_action ${PROJECT_NAME})
+rosbuild_link_boost(monocam_settler_action thread)
 
 #common commands for building c++ executables and libraries
 #target_link_libraries(${PROJECT_NAME} another_library)
-#rosbuild_add_boost_directories()
-#rosbuild_link_boost(${PROJECT_NAME} thread)
 #rosbuild_add_executable(example examples/example.cpp)
 #target_link_libraries(example ${PROJECT_NAME})
 
