add required frames to l/r samples

--- a/pr2_calibration_launch/capture_data/samples_pr2_beta/2_right/config.yaml
+++ b/pr2_calibration_launch/capture_data/samples_pr2_beta/2_right/config.yaml
@@ -2,3 +2,4 @@ group: "Right Arm"
 prompt: "Please put the checkerboard in the right hand (open/close the gripper with the joystick's square/circle buttons)."
 finish: "Skipping right arm samples"
 repeat: False
+require: r_wrist_roll_joint
