--- a/pr2_calibration_launch/capture_data/samples_pr2_beta/1_left/config.yaml
+++ b/pr2_calibration_launch/capture_data/samples_pr2_beta/1_left/config.yaml
@@ -2,3 +2,4 @@ group: "Left Arm"
 prompt: "Please put the checkerboard in the left hand (open/close the gripper with the joystick's left/right D-Pad buttons)."
 finish: "Skipping left arm samples"
 repeat: False
+require: l_wrist_roll_joint
