make kinect data stand out more in error plots

--- a/pr2_calibration_launch/view_results/head_laser_config.yaml
+++ b/pr2_calibration_launch/view_results/head_laser_config.yaml
@@ -38,12 +38,12 @@
   3d: tilt_laser
   cam: kinect_head
   plot_ops:
-    color: m
+    color: g
     marker: o
 
 - name: "Tilt Laser: KinectTorso"
   3d: tilt_laser
   cam: kinect_torso
   plot_ops:
-    color: m
+    color: g
     marker: o
