--- a/pr2_calibration_launch/capture_data/samples_pr2_beta/1_left/l_arm_0028.yaml
+++ b/pr2_calibration_launch/capture_data/samples_pr2_beta/1_left/l_arm_0028.yaml
@@ -3,6 +3,8 @@ camera_measurements:
 - {cam_id: wide_left_rect, config: small_cb_4x5}
 - {cam_id: wide_right_rect, config: small_cb_4x5}
 - {cam_id: narrow_right_rect, config: small_cb_4x5}
+- {cam_id: kinect_head, config: small_cb_4x5}
+- {cam_id: prosilica_kinect, config: small_cb_4x5}
 joint_commands:
 - controller: head_traj_controller
   segments:
