--- a/pr2_calibration_launch/capture_data/samples_pr2_beta/2_right/r_arm_0005.yaml
+++ b/pr2_calibration_launch/capture_data/samples_pr2_beta/2_right/r_arm_0005.yaml
@@ -1,6 +1,7 @@
 camera_measurements:
 - {cam_id: wide_left_rect, config: small_cb_4x5}
 - {cam_id: wide_right_rect, config: small_cb_4x5}
+- {cam_id: kinect_head, config: small_cb_4x5}
 joint_commands:
 - controller: head_traj_controller
   segments:
