--- a/pr2_calibration_launch/capture_data/hardware_config/cam_config.yaml
+++ b/pr2_calibration_launch/capture_data/hardware_config/cam_config.yaml
@@ -280,6 +280,48 @@ prosilica_rect:
       led_detector:
         active: False
 
+# ----- Prosilica (on Kinect Mount) -----
+# TODO: tune these parameters
+prosilica_kinect:
+  cb_detector_config:  /prosilica_kinect/cb_detector_config
+  led_detector_config: /prosilica_kinect/led_detector
+  settler_config:      /prosilica_kinect/monocam_settler_config
+
+  configs:
+    cb_7x6:
+      settler:
+        tolerance: 2.00
+        ignore_failures: True
+        max_step: 3.0
+        cache_size: 100
+      cb_detector:
+        active: True
+        num_x: 7
+        num_y: 6
+        width_scaling: 0.25
+        height_scaling: 0.25
+        subpixel_window: 4
+        subpixel_zero_zone: 1
+      led_detector:
+        active: False
+    small_cb_4x5:
+      settler:
+        tolerance: 2.00
+        ignore_failures: True
+        max_step: 3.0
+        cache_size: 100
+      cb_detector:
+        active: True
+        num_x: 4
+        num_y: 5
+        width_scaling: 0.25
+        height_scaling: 0.25
+        subpixel_window: 4
+        subpixel_zero_zone: 1
+      led_detector:
+        active: False
+
+# ----- Head Mounted Kinect -----
 kinect_head:
   cb_detector_config:  /kinect_head/rgb/cb_detector_config
   led_detector_config: /kinect_head/rgb/led_detector
@@ -319,6 +361,7 @@ kinect_head:
       led_detector:
         active: False
 
+# ----- Torso Mounted Kinect -----
 kinect_torso:
   cb_detector_config:  /kinect_torso/rgb/cb_detector_config
   led_detector_config: /kinect_torso/rgb/led_detector
