Add kinect prosilica optimization step.

--- a/pr2_calibration_launch/estimate_params/config_pr2_beta/free_head_laser_4.yaml
+++ b/pr2_calibration_launch/estimate_params/config_pr2_beta/free_head_laser_4.yaml
@@ -3,6 +3,7 @@
     right_arm_chain_cb:             [ 1, 1, 1, 0, 1, 1 ]
     left_arm_chain_cb:              [ 1, 1, 1, 0, 1, 1 ]
     high_def_frame_joint:           [ 1, 1, 1, 1, 1, 1 ]
+    head_mount_prosilica_joint:     [ 1, 1, 1, 1, 1, 1 ]
 
   chains:
     right_arm_chain:
