--- a/pr2_calibration_launch/capture_data/samples_pr2_beta/0_far/far_0000.yaml
+++ b/pr2_calibration_launch/capture_data/samples_pr2_beta/0_far/far_0000.yaml
@@ -4,6 +4,7 @@ camera_measurements:
 - {cam_id: wide_right_rect, config: cb_7x6}
 - {cam_id: narrow_right_rect, config: cb_7x6}
 - {cam_id: prosilica_rect, config: cb_7x6}
+- {cam_id: prosilica_kinect, config: cb_7x6}
 - {cam_id: kinect_head, config: cb_7x6}
 - {cam_id: kinect_torso, config: cb_7x6}
 joint_commands:
