--- a/pr2_calibration_launch/capture_data/samples_pr2_beta/0_far/far_0000.yaml
+++ b/pr2_calibration_launch/capture_data/samples_pr2_beta/0_far/far_0000.yaml
@@ -25,6 +25,6 @@ joint_commands:
 joint_measurements:
 - {chain_id: head_chain, config: tight_tol}
 laser_measurements:
-- {config: cb_7x6, laser_id: tilt_laser_7x6}
+- {config: cb_7x6, laser_id: tilt_laser}
 sample_id: far_0000
 target: {chain_id: floating, target_id: large_cb_7x6}
