--- a/laser_joint_projector/CMakeLists.txt
+++ b/laser_joint_projector/CMakeLists.txt
@@ -16,6 +16,9 @@ set(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
 #set the default path for built libraries to the "lib" directory
 set(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)
 
+find_package(Eigen)
+include_directories(SYSTEM ${Eigen_INCLUDE_DIRS})
+
 rosbuild_add_library(${PROJECT_NAME} src/laser_joint_projector.cpp)
 
 rosbuild_add_executable(laser_joint_projector_node src/laser_joint_projector_node.cpp)
