Catkinized and compiled dense_laser_assembler

--- a/dense_laser_assembler/package.xml
+++ b/dense_laser_assembler/package.xml
@@ -23,14 +23,14 @@
   <build_depend>sensor_msgs</build_depend>
   <build_depend>calibration_msgs</build_depend>
   <build_depend>settlerlib</build_depend>
-
+  <build_depend>roscpp_serialization</build_depend>
   <!-- Dependencies needed after this package is compiled. -->
   <run_depend>roscpp</run_depend>
   <run_depend>std_msgs</run_depend>
   <run_depend>sensor_msgs</run_depend>
   <run_depend>calibration_msgs</run_depend>
   <run_depend>settlerlib</run_depend>
-
+  <run_depend>roscpp_serialization</run_depend>
   <!-- Dependencies needed only for running tests. -->
   <!-- <test_depend>roscpp</test_depend> -->
   <!-- <test_depend>std_msgs</test_depend> -->
