--- a/dense_laser_assembler/CMakeLists.txt
+++ b/dense_laser_assembler/CMakeLists.txt
@@ -4,7 +4,7 @@ cmake_minimum_required(VERSION 2.8.3)
 project(dense_laser_assembler)
 # Load catkin and all dependencies required for this package
 # TODO: remove all from COMPONENTS that are not catkin packages.
-find_package(catkin REQUIRED COMPONENTS roscpp std_msgs sensor_msgs calibration_msgs settlerlib)
+find_package(catkin REQUIRED COMPONENTS roscpp std_msgs sensor_msgs calibration_msgs settlerlib roscpp_serialization)
 
 # include_directories(include ${Boost_INCLUDE_DIR} ${catkin_INCLUDE_DIRS})
 # CATKIN_MIGRATION: removed during catkin migration
@@ -25,15 +25,19 @@ set(ROS_BUILD_TYPE Debug)
 
 # CATKIN_MIGRATION: removed during catkin migration
 # rosbuild_init()
+include_directories(include ${catkin_INCLUDE_DIRS} ${BOOST_INCLUDE_DIRS})
 
 add_library(dense_laser_assembler src/dense_laser_assembler.cpp)
-
+target_link_libraries(dense_laser_assembler ${catkin_LIBRARIES} ${roscpp_serialization_LIBRARIES})
 add_executable(dense_laser_imager src/dense_laser_imager.cpp)
-
+target_link_libraries(dense_laser_imager ${roscpp_serialization_LIBRARIES} ${catkin_LIBRARIES})
 set(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
 set(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)
 
-add_subdirectory(test EXCLUDE_FROM_ALL)
+
+set(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR})
+
+
 ## Generate added messages and services with any dependencies listed here
 #generate_messages(
 #    #TODO DEPENDENCIES geometry_msgs std_msgs
@@ -42,9 +46,11 @@ add_subdirectory(test EXCLUDE_FROM_ALL)
 # catkin_package parameters: http://ros.org/doc/groovy/api/catkin/html/dev_guide/generated_cmake_api.html#catkin-package
 # TODO: fill in what other packages will need to use this package
 catkin_package(
-    DEPENDS roscpp std_msgs sensor_msgs calibration_msgs settlerlib
-    CATKIN_DEPENDS # TODO
+    DEPENDS roscpp std_msgs sensor_msgs calibration_msgs settlerlib roscpp_serialization
+    CATKIN_DEPENDS roscpp roscpp_serialization# TODO
     INCLUDE_DIRS # TODO include
     LIBRARIES # TODO
 )
 
+catkin_add_gtest(test test/dense_laser_assembler_unittest.cpp)
+target_link_libraries(test dense_laser_assembler)
