--- a/laser_joint_projector/CMakeLists.txt
+++ b/laser_joint_projector/CMakeLists.txt
@@ -1,5 +1,18 @@
-cmake_minimum_required(VERSION 2.4.6)
-include($ENV{ROS_ROOT}/core/rosbuild/rosbuild.cmake)
+# Catkin User Guide: http://www.ros.org/doc/groovy/api/catkin/html/user_guide/user_guide.html
+# Catkin CMake Standard: http://www.ros.org/doc/groovy/api/catkin/html/user_guide/standards.html
+cmake_minimum_required(VERSION 2.8.3)
+project(laser_joint_projector)
+# Load catkin and all dependencies required for this package
+# TODO: remove all from COMPONENTS that are not catkin packages.
+find_package(catkin REQUIRED COMPONENTS calibration_msgs kdl_parser orocos_kdl geometry_msgs roscpp_serialization)
+
+include_directories(include ${orocos_kdl_INCLUDE_DIRS})
+# include_directories(include ${Boost_INCLUDE_DIR} ${catkin_INCLUDE_DIRS})
+# CATKIN_MIGRATION: removed during catkin migration
+# cmake_minimum_required(VERSION 2.4.6)
+
+# CATKIN_MIGRATION: removed during catkin migration
+# include($ENV{ROS_ROOT}/core/rosbuild/rosbuild.cmake)
 
 # Set the build type.  Options are:
 #  Coverage       : w/ debug symbols, w/o optimization, w/ code-coverage
@@ -9,35 +22,54 @@ include($ENV{ROS_ROOT}/core/rosbuild/rosbuild.cmake)
 #  MinSizeRel     : w/o debug symbols, w/ optimization, stripped binaries
 #set(ROS_BUILD_TYPE RelWithDebInfo)
 
-rosbuild_init()
+
+# CATKIN_MIGRATION: removed during catkin migration
+# rosbuild_init()
 
 #set the default path for built executables to the "bin" directory
 set(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
 #set the default path for built libraries to the "lib" directory
 set(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)
 
+find_package(orocos_kdl)
 find_package(Eigen)
 include_directories(SYSTEM ${Eigen_INCLUDE_DIRS})
 
-rosbuild_add_library(${PROJECT_NAME} src/laser_joint_projector.cpp)
+add_library(${PROJECT_NAME} src/laser_joint_projector.cpp)
 
-rosbuild_add_executable(laser_joint_projector_node src/laser_joint_projector_node.cpp)
+target_link_libraries(${PROJECT_NAME} ${catkin_LIBRARIES} ${orocos_kdl_LIBRARIES} ${roscpp_serialization_LIBRARIES})
+
+add_executable(laser_joint_projector_node src/laser_joint_projector_node.cpp)
 target_link_libraries(laser_joint_projector_node ${PROJECT_NAME})
 
-rosbuild_add_executable(keyboard_float_generator src/keyboard_float_generator.cpp)
+add_executable(keyboard_float_generator src/keyboard_float_generator.cpp)
+target_link_libraries(keyboard_float_generator ${catkin_LIBRARIES})
 
-rosbuild_add_executable(time_alignment_node src/time_alignment_node.cpp)
+add_executable(time_alignment_node src/time_alignment_node.cpp)
 target_link_libraries(time_alignment_node ${PROJECT_NAME})
 
 #uncomment if you have defined messages
-#rosbuild_genmsg()
-#uncomment if you have defined services
-#rosbuild_gensrv()
 
 #common commands for building c++ executables and libraries
-#rosbuild_add_library(${PROJECT_NAME} src/example.cpp)
+#add_library(${PROJECT_NAME} src/example.cpp)
 #target_link_libraries(${PROJECT_NAME} another_library)
-#rosbuild_add_boost_directories()
-#rosbuild_link_boost(${PROJECT_NAME} thread)
-#rosbuild_add_executable(example examples/example.cpp)
+#
+# CATKIN_MIGRATION: removed during catkin migration
+# rosbuild_add_boost_directories()
+#find_package(Boost REQUIRED COMPONENTS thread)
+include_directories(${Boost_INCLUDE_DIRS})
+target_link_libraries(${PROJECT_NAME} ${Boost_LIBRARIES})
+#add_executable(example examples/example.cpp)
 #target_link_libraries(example ${PROJECT_NAME})
+## Generate added messages and services with any dependencies listed here
+
+# catkin_package parameters: http://ros.org/doc/groovy/api/catkin/html/dev_guide/generated_cmake_api.html#catkin-package
+# TODO: fill in what other packages will need to use this package
+catkin_package(
+    DEPENDS calibration_msgs kdl_parser orocos_kdl geometry_msgs roscpp_serialization
+    CATKIN_DEPENDS # TODO
+    INCLUDE_DIRS # TODO include
+    LIBRARIES # TODO
+)
+
+
