--- a/laser_joint_projector/CMakeLists.txt
+++ b/laser_joint_projector/CMakeLists.txt
@@ -2,11 +2,17 @@
 # Catkin CMake Standard: http://www.ros.org/doc/groovy/api/catkin/html/user_guide/standards.html
 cmake_minimum_required(VERSION 2.8.3)
 project(laser_joint_projector)
-# Load catkin and all dependencies required for this package
-# TODO: remove all from COMPONENTS that are not catkin packages.
-find_package(catkin REQUIRED COMPONENTS calibration_msgs kdl_parser orocos_kdl geometry_msgs roscpp_serialization)
+find_package(catkin REQUIRED COMPONENTS calibration_msgs roscpp geometry_msgs roscpp_serialization)
 
-include_directories(include ${orocos_kdl_INCLUDE_DIRS})
+find_package(kdl_parser)
+find_package(Eigen REQUIRED)
+find_package(orocos_kdl REQUIRED)
+include_directories(SYSTEM ${Eigen_INCLUDE_DIRS})
+include_directories(include ${catkin_INCLUDE_DIRS})
+include_directories(${kdl_parser_INCLUDE_DIRS})
+include_directories(${orocos_kdl_INCLUDE_DIRS})
+link_directories(${PROJECT_NAME} ${catkin_INCLUDE_DIRS})
+
 # include_directories(include ${Boost_INCLUDE_DIR} ${catkin_INCLUDE_DIRS})
 # CATKIN_MIGRATION: removed during catkin migration
 # cmake_minimum_required(VERSION 2.4.6)
@@ -25,28 +31,24 @@ include_directories(include ${orocos_kdl_INCLUDE_DIRS})
 
 # CATKIN_MIGRATION: removed during catkin migration
 # rosbuild_init()
-
 #set the default path for built executables to the "bin" directory
 set(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
 #set the default path for built libraries to the "lib" directory
 set(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)
 
-find_package(orocos_kdl)
-find_package(Eigen)
-include_directories(SYSTEM ${Eigen_INCLUDE_DIRS})
+
 
 add_library(${PROJECT_NAME} src/laser_joint_projector.cpp)
-
-target_link_libraries(${PROJECT_NAME} ${catkin_LIBRARIES} ${orocos_kdl_LIBRARIES} ${roscpp_serialization_LIBRARIES})
+target_link_libraries(${PROJECT_NAME} ${catkin_LIBRARIES} ${Boost_LIBRARIES})
 
 add_executable(laser_joint_projector_node src/laser_joint_projector_node.cpp)
-target_link_libraries(laser_joint_projector_node ${PROJECT_NAME})
+target_link_libraries(laser_joint_projector_node ${PROJECT_NAME} ${catkin_LIBRARIES} ${Eigen_LIBRARIES} ${kdl_parser_LIBRARIES} ${orocos_kdl_LIBRARIES})
 
 add_executable(keyboard_float_generator src/keyboard_float_generator.cpp)
 target_link_libraries(keyboard_float_generator ${catkin_LIBRARIES})
 
 add_executable(time_alignment_node src/time_alignment_node.cpp)
-target_link_libraries(time_alignment_node ${PROJECT_NAME})
+target_link_libraries(time_alignment_node ${PROJECT_NAME} ${catkin_LIBRARIES} ${Eigen_LIBRARIES} ${kdl_parser_LIBRARIES} ${orocos_kdl_LIBRARIES})
 
 #uncomment if you have defined messages
 
@@ -57,8 +59,6 @@ target_link_libraries(time_alignment_node ${PROJECT_NAME})
 # CATKIN_MIGRATION: removed during catkin migration
 # rosbuild_add_boost_directories()
 #find_package(Boost REQUIRED COMPONENTS thread)
-include_directories(${Boost_INCLUDE_DIRS})
-target_link_libraries(${PROJECT_NAME} ${Boost_LIBRARIES})
 #add_executable(example examples/example.cpp)
 #target_link_libraries(example ${PROJECT_NAME})
 ## Generate added messages and services with any dependencies listed here
@@ -66,9 +66,9 @@ target_link_libraries(${PROJECT_NAME} ${Boost_LIBRARIES})
 # catkin_package parameters: http://ros.org/doc/groovy/api/catkin/html/dev_guide/generated_cmake_api.html#catkin-package
 # TODO: fill in what other packages will need to use this package
 catkin_package(
-    DEPENDS calibration_msgs kdl_parser orocos_kdl geometry_msgs roscpp_serialization
+    DEPENDS calibration_msgs kdl_parser geometry_msgs roscpp_serialization laser_joint_projector
     CATKIN_DEPENDS # TODO
-    INCLUDE_DIRS # TODO include
+    INCLUDE_DIRS ${catkin_INCLUDE_DIRS}# TODO include
     LIBRARIES # TODO
 )
 
