--- a/pr2_dense_laser_snapshotter/CMakeLists.txt
+++ b/pr2_dense_laser_snapshotter/CMakeLists.txt
@@ -6,7 +6,8 @@ project(pr2_dense_laser_snapshotter)
 # TODO: remove all from COMPONENTS that are not catkin packages.
 find_package(catkin REQUIRED COMPONENTS dense_laser_assembler pr2_msgs)
 
-# include_directories(include ${Boost_INCLUDE_DIR} ${catkin_INCLUDE_DIRS})
+include_directories(include ${Boost_INCLUDE_DIR} ${catkin_INCLUDE_DIRS})
+link_directories(${catkin_INCLUDE_DIRS})
 # CATKIN_MIGRATION: removed during catkin migration
 # cmake_minimum_required(VERSION 2.4.6)
 
@@ -21,7 +22,6 @@ find_package(catkin REQUIRED COMPONENTS dense_laser_assembler pr2_msgs)
 #  MinSizeRel     : w/o debug symbols, w/ optimization, stripped binaries
 #set(ROS_BUILD_TYPE RelWithDebInfo)
 
-
 # CATKIN_MIGRATION: removed during catkin migration
 # rosbuild_init()
 
@@ -30,39 +30,30 @@ set(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
 #set the default path for built libraries to the "lib" directory
 set(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)
 
-#add_message_files(
-  FILES
-  # TODO: List your msg files here
-)
-#add_service_files(
-  FILES
-  # TODO: List your msg files here
-)
-
+#include_directories(include ${Boost_INCLUDE_DIRS} ${catkin_INCLUDE_DIRS} ${dense_laser_assembler_INCLUDES})
+#link_directories(${dense_laser_assembler_INCLUDE_DIRS}/dense_laser_assembler)
 add_executable(dense_laser_snapshotter src/dense_laser_snapshotter.cpp)
+target_link_libraries(dense_laser_snapshotter ${catkin_LIBRARIES})
+add_dependencies(dense_laser_snapshotter ${catkin_EXPORTED_TARGETS})
 
-#common commands for building c++ executables and libraries
+#common commands for building c++ executables and libraries 
 #add_library(${PROJECT_NAME} src/example.cpp)
 #target_link_libraries(${PROJECT_NAME} another_library)
 #
 # CATKIN_MIGRATION: removed during catkin migration
 # rosbuild_add_boost_directories()
 #find_package(Boost REQUIRED COMPONENTS thread)
-include_directories(${Boost_INCLUDE_DIRS})
-target_link_libraries(${PROJECT_NAME} ${Boost_LIBRARIES})
+
 #add_executable(example examples/example.cpp)
 #target_link_libraries(example ${PROJECT_NAME})
 ## Generate added messages and services with any dependencies listed here
-generate_messages(
-    #TODO DEPENDENCIES geometry_msgs std_msgs
-)
 
 # catkin_package parameters: http://ros.org/doc/groovy/api/catkin/html/dev_guide/generated_cmake_api.html#catkin-package
 # TODO: fill in what other packages will need to use this package
 catkin_package(
-    DEPENDS dense_laser_assembler pr2_msgs
+    DEPENDS include pr2_msgs
     CATKIN_DEPENDS # TODO
-    INCLUDE_DIRS # TODO include
+    INCLUDE_DIRS ${catkin_INCLUDE_DIRS}# TODO include
     LIBRARIES # TODO
 )
 
