--- a/pr2_dense_laser_snapshotter/CMakeLists.txt
+++ b/pr2_dense_laser_snapshotter/CMakeLists.txt
@@ -7,53 +7,14 @@ project(pr2_dense_laser_snapshotter)
 find_package(catkin REQUIRED COMPONENTS dense_laser_assembler pr2_msgs)
 
 include_directories(include ${Boost_INCLUDE_DIR} ${catkin_INCLUDE_DIRS})
-link_directories(${catkin_INCLUDE_DIRS})
-# CATKIN_MIGRATION: removed during catkin migration
-# cmake_minimum_required(VERSION 2.4.6)
-
-# CATKIN_MIGRATION: removed during catkin migration
-# include($ENV{ROS_ROOT}/core/rosbuild/rosbuild.cmake)
-
-# Set the build type.  Options are:
-#  Coverage       : w/ debug symbols, w/o optimization, w/ code-coverage
-#  Debug          : w/ debug symbols, w/o optimization
-#  Release        : w/o debug symbols, w/ optimization
-#  RelWithDebInfo : w/ debug symbols, w/ optimization
-#  MinSizeRel     : w/o debug symbols, w/ optimization, stripped binaries
-#set(ROS_BUILD_TYPE RelWithDebInfo)
-
-# CATKIN_MIGRATION: removed during catkin migration
-# rosbuild_init()
-
-#set the default path for built executables to the "bin" directory
-set(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
-#set the default path for built libraries to the "lib" directory
-set(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)
-
-#include_directories(include ${Boost_INCLUDE_DIRS} ${catkin_INCLUDE_DIRS} ${dense_laser_assembler_INCLUDES})
-#link_directories(${dense_laser_assembler_INCLUDE_DIRS}/dense_laser_assembler)
-add_executable(dense_laser_snapshotter src/dense_laser_snapshotter.cpp)
-target_link_libraries(dense_laser_snapshotter ${catkin_LIBRARIES})
-add_dependencies(dense_laser_snapshotter ${catkin_EXPORTED_TARGETS})
-
-#common commands for building c++ executables and libraries 
-#add_library(${PROJECT_NAME} src/example.cpp)
-#target_link_libraries(${PROJECT_NAME} another_library)
-#
-# CATKIN_MIGRATION: removed during catkin migration
-# rosbuild_add_boost_directories()
-#find_package(Boost REQUIRED COMPONENTS thread)
-
-#add_executable(example examples/example.cpp)
-#target_link_libraries(example ${PROJECT_NAME})
-## Generate added messages and services with any dependencies listed here
-
-# catkin_package parameters: http://ros.org/doc/groovy/api/catkin/html/dev_guide/generated_cmake_api.html#catkin-package
-# TODO: fill in what other packages will need to use this package
 catkin_package(
-    DEPENDS include pr2_msgs
-    CATKIN_DEPENDS # TODO
-    INCLUDE_DIRS ${catkin_INCLUDE_DIRS}# TODO include
+    DEPENDS 
+    CATKIN_DEPENDS pr2_msgs dense_laser_assembler# TODO
+    INCLUDE_DIRS # TODO include
     LIBRARIES # TODO
 )
+
+add_executable(dense_laser_snapshotter src/dense_laser_snapshotter.cpp)
+target_link_libraries(dense_laser_snapshotter ${catkin_LIBRARIES})
+add_dependencies(dense_laser_snapshotter ${catkin_EXPORTED_TARGETS}dense_laser_assembler_gencpp )
 
