--- a/laser_joint_projector/package.xml
+++ b/laser_joint_projector/package.xml
@@ -16,6 +16,7 @@
   <buildtool_depend>catkin</buildtool_depend>
 
   <!-- Dependencies needed to compile this package. -->
+  <build_depend>cmake_modules</build_depend>
   <build_depend>calibration_msgs</build_depend>
   <build_depend>kdl_parser</build_depend>
   <build_depend>orocos_kdl</build_depend>
