--- a/dense_laser_assembler/package.xml
+++ b/dense_laser_assembler/package.xml
@@ -6,7 +6,7 @@
     processing on the data, and can also be used for very fast approx
     neighborhood searches.  This package is still experimental and unstable.
     Expect its APIs to change.</description>
-  <maintainer email="dash@clearpathrobotics.com">Devon Ash</maintainer>
+  <maintainer email="dave@cse.unr.edu">Dave Feil-Seifer</maintainer>
   <license>BSD</license>
 
   <url type="website">http://www.ros.org/wiki/dense_laser_assembler</url>
