--- a/laser_joint_processor/package.xml
+++ b/laser_joint_processor/package.xml
@@ -4,7 +4,7 @@
   <description>Computes joint angles associated with a specific set of detected checkerboard corners.
      This package is experimental and unstable.
      Expect its APIs to change.</description>
-  <maintainer email="dash@clearpathrobotics.com">Devon Ash</maintainer>
+  <maintainer email="dave@cse.unr.edu">Dave Feil-Seifer</maintainer>
   <license>BSD</license>
 
   <url type="website">http://www.ros.org/wiki/laser_joint_processor</url>
