--- a/pr2_calibration/package.xml
+++ b/pr2_calibration/package.xml
@@ -3,7 +3,7 @@
   <name>pr2_calibration</name>
   <version>1.0.9</version>
   <description>The pr2_calibration package</description>
-  <maintainer email="dash@clearpathrobotics.com">Devon Ash</maintainer>
+  <maintainer email="dave@cse.unr.edu">Dave Feil-Seifer</maintainer>
   <license>TODO</license>
   <buildtool_depend>catkin</buildtool_depend>
 
