--- a/pr2_dense_laser_snapshotter/package.xml
+++ b/pr2_dense_laser_snapshotter/package.xml
@@ -4,7 +4,7 @@
   <description>Stores the data from a series of laser scan messages in a dense representation, allowing
      users to easily perform image-like operations on intensity or range data. This package is
      experimental. Expect APIs to change.</description>
-  <maintainer email="dash@clearpathrobotics.com">Devon Ash</maintainer>
+  <maintainer email="dave@cse.unr.edu">Dave Feil-Seifer</maintainer>
   <license>BSD</license>
 
   <url type="website">http://www.ros.org/wiki/pr2_dense_laser_snapshotter</url>
